# vllpy

./: .gitignore  LICENSE  README.md  docarray_test.ipynb  embedding_generator.py  pyproject.toml
examples/: compare_models.ipynb  example_similarity.ipynb  example_usage.ipynb
examples/drawings/: .env_template  auth_template.txt  drawings.ipynb  embedding_analysis.ipynb  mongo_retrieval.ipynb
examples/input/: inputs.csv
examples/output/: clip_image_embeddings_csv.csv
examples/output/image_embeddings/: bird.npy  clip_image_embeddings_npy.csv
examples/output/image_embeddings/acorns/: acorn.npy
examples/output/text_embeddings/: acorn.npy  bird.npy  clip_text_embeddings_npy.csv
examples/similarity/: example_similarity.ipynb
src/vislearnlabpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vislearnlabpy/drawings/: drawing.py  svg_render_helpers.py
src/vislearnlabpy/embeddings/: embedding_store.py  embedding_utils.py  generate_embeddings.py  similarity_generator.py  similarity_utils.py  stimuli_loader.py  utils.py
src/vislearnlabpy/extractions/: drawings.py  drawingtask_extractor.py  mongo_extractor.py
src/vislearnlabpy/models/: clip_model.py  feature_generator.py  hf_model.py  multimodal_model.py  silicon_menagerie_utils.py
