[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "vislearnlabpy"
version = "0.0.2.9"
authors = [
  { name="Tarun Sepuri", email="tarunsepuri@gmail.com" },
]
dependencies = [
  "pandas>=2.2.3",
  "tqdm>=4.67.1",
  "pillow>=11.0.0",
  "docarray[full]>=0.41.0",
  "numpy>=2.2.4",
  "matplotlib>=3.10.1",
  "protobuf>=6.30.2",
  "scipy>=1.15.2",
  "pymongo>=4.13.2",
  "python-dotenv>=1.1.1",
  "svgpathtools>=1.7.1",
  "scikit-image>=0.25.2"
]
description = "Visual Learning Lab utility files and pipelines"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/vislearnlab/vllpy"
Issues = "https://github.com/vislearnlab/vllpy/issues"